# 42-call-me-maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
src/: __init__.py  __main__.py  file_io.py  input.py  model.py  models.py
