[project]
name = "call-me-maybe"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "llm-sdk",
]

[dependency-groups]
dev = [
    "flake8>=7.0",
    "mypy>=1.0",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
